--- a/install.txt
+++ b/install.txt
@@ -197,6 +197,8 @@ sudo /opt/squid/sbin/squid -k parse -f /opt/squid/etc/squid.conf
 # 备份原配置
 sudo cp /etc/krb5.conf /etc/krb5.conf.bak
 
-cp squid.keytab /opt/squid/etc/app.keytab
-cp krb5.conf /etc/krb5.conf
+cp app.keytab /opt/squid/etc/app.keytab
+chown squid.squid /opt/squid/etc/app.keytab
+\cp krb5.conf /etc/krb5.conf
+
 
