--- a/install.txt
+++ b/install.txt
@@ -36,7 +36,10 @@ EOF'
 
 # 设置hosts文件
 sudo bash -c 'cat >> /etc/hosts << EOF
+#### ADDED BY OPP BEGIN ####
+160.88.114.70 corprodc02.corp.ha.org.hk
 160.98.39.18 corprodc03.corp.ha.org.hk
+#### ADDED BY OPP END ####
 EOF'
 
 
