--- a/install.txt
+++ b/install.txt
@@ -294,3 +294,30 @@ make
 
 # 安装（需要sudo权限）
 sudo make install
+
+---
+# 创建nginx服务文件
+sudo tee /etc/systemd/system/nginx.service > /dev/null << 'EOF'
+[Unit]
+Description=The nginx HTTP and reverse proxy server
+After=network.target remote-fs.target nss-lookup.target
+
+[Service]
+Type=forking
+PIDFile=/usr/nginx/logs/nginx.pid
+ExecStartPre=/usr/nginx/sbin/nginx -t
+ExecStart=/usr/nginx/sbin/nginx
+ExecReload=/usr/nginx/sbin/nginx -s reload
+ExecStop=/bin/kill -s QUIT $MAINPID
+PrivateTmp=true
+
+[Install]
+WantedBy=multi-user.target
+EOF
+
+# 重新加载 systemd
+sudo systemctl daemon-reload
+sudo systemctl enable nginx
+
+sudo systemctl srart nginx
+sudo systemctl status nginx
