--- a/install.txt
+++ b/install.txt
@@ -365,15 +365,21 @@ sudo make install
 
 
 ---
+sudo cp redis.conf /etc/redis.conf
 sudo cp /etc/redis.conf /etc/redis.conf.bak
 sudo sed -i 's/^bind 127.0.0.1 -::1/bind 0.0.0.0/' /etc/redis.conf
 sudo sed -i 's/^protected-mode yes/protected-mode no/' /etc/redis.conf
 sudo sed -i 's|^dir ./|dir /opt/redis|' /etc/redis.conf
 sudo sed -i 's/^# requirepass foobared/requirepass StrongP@@ssw0rd123!/' /etc/redis.conf
 
+
+echo "vm.overcommit_memory = 1" >> /etc/sysctl.conf
+echo "net.core.somaxconn = 512" >> /etc/sysctl.conf
+
 sudo mkdir -p /opt/redis
 sudo chown redis:redis /opt/redis
 sudo systemctl restart redis
+
 
 # 注意修改下面地方
 # bind 0.0.0.0
