--- a/install.txt
+++ b/install.txt
@@ -388,3 +388,34 @@ sudo systemctl restart redis
 # dir /opt/redis
 # dbfilename dump.rdb
 # requirepass StrongP@@ssw0rd123!
+
+----
+sudo tee /etc/systemd/system/redis.service > /dev/null << 'EOF'
+[Unit]
+Description=Redis persistent key-value database
+After=network.target
+
+[Service]
+Type=forking
+ExecStart=/usr/local/bin/redis-server /etc/redis.conf
+ExecStop=/usr/local/bin/redis-cli -p 6379 -a StrongP@@ssw0rd123! shutdown
+Restart=always
+User=redis
+Group=redis
+RuntimeDirectory=redis
+RuntimeDirectoryMode=0755
+PIDFile=/run/redis/redis-server.pid
+
+[Install]
+WantedBy=multi-user.target
+EOF
+
+/run/redis/redis_6379.pid
+
+sudo systemctl daemon-reload
+sudo systemctl enable redis
+sudo systemctl start redis
+sudo systemctl status redis
+sudo systemctl restart redis
+
+redis-cli -h 127.0.0.1 -p 6379 -a 'StrongP@@ssw0rd123!'
