--- a/install.txt
+++ b/install.txt
@@ -368,10 +368,16 @@ sudo make install
 sudo cp redis.conf /etc/redis.conf
 sudo cp /etc/redis.conf /etc/redis.conf.bak
 sudo sed -i 's/^daemonize no/daemonize yes/' /etc/redis.conf
-sudo sed -i 's/^bind 127.0.0.1 -::1/bind 0.0.0.0/' /etc/redis.conf
 sudo sed -i 's/^protected-mode yes/protected-mode no/' /etc/redis.conf
 sudo sed -i 's|^dir ./|dir /opt/redis|' /etc/redis.conf
 sudo sed -i 's/^# requirepass foobared/requirepass StrongP@@ssw0rd123!/' /etc/redis.conf
+sudo sed -i 's/^logfile ""$/logfile \/var\/log\/redis.log/' redis.conf
+
+
+sudo useradd -M -s /bin/bash redis
+sudo mkdir -p /opt/redis
+sudo chown redis:redis /opt/redis
+sudo systemctl restart redis
 
 
 echo "vm.overcommit_memory = 1" >> /etc/sysctl.conf
@@ -381,9 +387,10 @@ sudo mkdir -p /opt/redis
 sudo chown redis:redis /opt/redis
 sudo systemctl restart redis
 
+bind 127.0.0.1 -::1
 
 # 注意修改下面地方
-# bind 0.0.0.0
+# bind 127.0.0.1 -::1
 # protected-mode no
 # port 6379
 # dir /opt/redis
@@ -405,7 +412,7 @@ User=redis
 Group=redis
 RuntimeDirectory=redis
 RuntimeDirectoryMode=0755
-PIDFile=/run/redis/redis-server.pid
+PIDFile=/var/run/redis_6379.pid
 
 [Install]
 WantedBy=multi-user.target
