--- a/install.txt
+++ b/install.txt
@@ -367,6 +367,7 @@ sudo make install
 ---
 sudo cp redis.conf /etc/redis.conf
 sudo cp /etc/redis.conf /etc/redis.conf.bak
+sudo sed -i 's/^127.0.0.1 -::1/127.0.0.1' /etc/redis.conf
 sudo sed -i 's/^daemonize no/daemonize yes/' /etc/redis.conf
 sudo sed -i 's/^protected-mode yes/protected-mode no/' /etc/redis.conf
 sudo sed -i 's|^dir ./|dir /opt/redis|' /etc/redis.conf
@@ -388,7 +389,7 @@ sudo mkdir -p /opt/redis
 sudo chown redis:redis /opt/redis
 sudo systemctl restart redis
 
-bind 127.0.0.1 -::1
+
 
 # 注意修改下面地方
 # bind 127.0.0.1 -::1
