--- a/install.txt
+++ b/install.txt
@@ -11,6 +11,7 @@ TcN?U?JmqU1
 
 https://ka9rcghfcff.feishu.cn/wiki/BLjXwE6nmith8Wk7Tv4c4w72nmf
 
+poxappprd41a  192.168.52.236
 
 poxappprd52a  192.168.152.120
 poxappprd52b  192.168.152.121
