--- a/install.txt
+++ b/install.txt
@@ -37,6 +37,9 @@ P@ssw0rd123
 proxy=http://poxappprd41a:8080
 
 
+proxy=http://192.168.189.195:8080
+
+
 
 export http_proxy="http://LH511@CORP.HA.ORG.HK:tyP6Jx?urY1@poxappprd41a:8080"
 export https_proxy="http://LH511@CORP.HA.ORG.HK:tyP6Jx?urY1@poxappprd41a:8080"
