--- a/install.txt
+++ b/install.txt
@@ -313,6 +313,9 @@ usermod -a -G www-group nginx
 usermod -a -G www-group apache
 usermod -a -G www-group squid
 
+chown -R nginx.www-group /usr/nginx/
+
+
 chmod 775 /usr/nginx/html/transproxy_admin/storage/logs
 chown -R nginx.www-group /usr/nginx/html/transproxy_admin/storage/logs
 chmod g+s /usr/nginx/html/transproxy_admin/storage/logs
