--- a/install.txt
+++ b/install.txt
@@ -41,6 +41,11 @@ proxy=http://192.168.189.195:8080
 
 
 
+export http_proxy="http://192.168.189.195:8080"
+export https_proxy="http://192.168.189.195:8080"
+
+
+
 export http_proxy="http://LH511@CORP.HA.ORG.HK:tyP6Jx?urY1@poxappprd41a:8080"
 export https_proxy="http://LH511@CORP.HA.ORG.HK:tyP6Jx?urY1@poxappprd41a:8080"
 export no_proxy="localhost,127.0.0.1"
