--- a/install.txt
+++ b/install.txt
@@ -15,6 +15,10 @@ itp@8888
 https://ka9rcghfcff.feishu.cn/wiki/BLjXwE6nmith8Wk7Tv4c4w72nmf
 SERVER LIST
 https://ka9rcghfcff.feishu.cn/wiki/MftkwbS0qiIGXlkEoVLcKyCBnme?table=tblGdNWJ8ybel69A&view=vewkIjaPvb
+check list
+https://ka9rcghfcff.feishu.cn/wiki/EPyHwemmKiBgmdkgKDlc3lLInOf?sheet=0GAPui
+
+
 
 poxappprd41a  192.168.52.236
 
