--- a/install.txt
+++ b/install.txt
@@ -15,8 +15,11 @@ itp@8888
 https://ka9rcghfcff.feishu.cn/wiki/BLjXwE6nmith8Wk7Tv4c4w72nmf
 SERVER LIST
 https://ka9rcghfcff.feishu.cn/wiki/MftkwbS0qiIGXlkEoVLcKyCBnme?table=tblGdNWJ8ybel69A&view=vewkIjaPvb
+运维事项跟进
+
 check list
 https://ka9rcghfcff.feishu.cn/wiki/EPyHwemmKiBgmdkgKDlc3lLInOf?sheet=0GAPui
+
 
 
 
