--- a/install.txt
+++ b/install.txt
@@ -614,4 +614,11 @@ MemoryLimit=1G
 WantedBy=multi-user.target
 
 
+---
+
+options timeout:5 attempts:1
+search     corp.ha.org.hk server.ha.org.hk ha.org.hk
+
+nameserver 192.168.150.243
+nameserver 192.168.50.243
 
