--- a/install.txt
+++ b/install.txt
@@ -660,3 +660,10 @@ PROD[root@poxappprd52a poxappprd52a-52g]$ find
 
 ssl_certificate /usr/nginx/conf/ssl/poxappprd52a.crt;
 ssl_certificate_key /usr/nginx/conf/ssl/poxappprd52a.key;
+
+
+
+
+0 1 * * * /usr/bin/curl -k https://127.0.0.1:8000/api/logs_del  &>> /opt/squid_shell/logs/php_logs_del.log
+0 1,13 * * * /usr/bin/curl -k https://127.0.0.1:8000/api/upredis_dir &>> /opt/squid_shell/logs/php_upredis_dir.log
+
