--- a/install.txt
+++ b/install.txt
@@ -678,3 +678,5 @@ redis_version:7.4.2
 
 
 /usr/nginx/html/transproxy_admin/public/fileData/threat/logstatus_7days.json
+
+/usr/nginx/html/transproxy_admin/public/fileData/threat/week_top_url_10.json
