--- a/install.txt
+++ b/install.txt
@@ -680,3 +680,10 @@ redis_version:7.4.2
 /usr/nginx/html/transproxy_admin/public/fileData/threat/logstatus_7days.json
 
 /usr/nginx/html/transproxy_admin/public/fileData/threat/week_top_url_10.json
+
+/usr/nginx/html/transproxy_admin/public/fileData/threat/week_top_url_10.json
+
+
+IP统计: /usr/nginx/html/transproxy_admin/public/fileData/threat/week_top_ip_10.json
+URL统计: /usr/nginx/html/transproxy_admin/public/fileData/threat/week_top_url_10.json
+
