--- a/install.txt
+++ b/install.txt
@@ -687,3 +687,5 @@ redis_version:7.4.2
 IP统计: /usr/nginx/html/transproxy_admin/public/fileData/threat/week_top_ip_10.json
 URL统计: /usr/nginx/html/transproxy_admin/public/fileData/threat/week_top_url_10.json
 
+
+/usr/nginx/html/transproxy_admin/system_usage.json
