--- a/install.txt
+++ b/install.txt
@@ -693,3 +693,44 @@ URL统计: /usr/nginx/html/transproxy_admin/public/fileData/threat/week_top_url_
 
 WARNING you have Transparent Huge Pages (THP) support enabled in your kernel. This will create latency and memory usage issues with Redis. To fix this issue run the command 'echo never > /sys/kernel/mm/transparent_hugepage/enabled' as root, and add it to your /etc/rc.local in order to retain the setting after a reboot. Redis must be restarted after THP is disabled.
 
+
+---
+
+https://github.com/tair-opensource/RedisShake
+
+https://tair-opensource.github.io/RedisShake/zh/guide/getting-started.html
+
+git clone https://github.com/tair-opensource/RedisShake
+cd RedisShake
+sh build.sh
+
+
+shake.toml
+
+[sync_reader]
+address = "127.0.0.1:6379"
+password = "StrongP@@ssw0rd123!"
+
+[file_writer]
+path = "/tmp/local_dump.rdb"
+
+
+----
+shake.toml
+
+[source]
+address = "127.0.0.1:6379"
+password = "StrongP@@ssw0rd123!"
+
+[target]
+address = "127.0.0.1:6380"
+password = "StrongP@@ssw0rd123!"
+
+[sync_reader]
+cluster = false
+[redis_writer]
+cluster = false
+
+----
+
+./redis-shake shake.toml
