--- a/install.txt
+++ b/install.txt
@@ -734,3 +734,8 @@ cluster = false
 ----
 
 ./redis-shake shake.toml
+
+
+---
+
+/usr/nginx/html/transproxy_admin/public/fileData/threat/blacklist_summary.json
