--- a/install.txt
+++ b/install.txt
@@ -739,3 +739,8 @@ cluster = false
 ---
 
 /usr/nginx/html/transproxy_admin/public/fileData/threat/blacklist_summary.json
+
+
+IP统计: /usr/nginx/html/transproxy_admin/public/fileData/threat/week_top_ip_10.json
+URL统计: /usr/nginx/html/transproxy_admin/public/fileData/threat/week_top_url_10.json
+
