--- a/install.txt
+++ b/install.txt
@@ -814,3 +814,7 @@ systemctl restart sshd
 Ciphers aes128-ctr,aes192-ctr,aes256-ctr
 MACs hmac-sha2-512-etm@openssh.com,hmac-sha2-256-etm@openssh.com,umac-128-etm@openssh.com,hmac-sha2-512,hmac-sha2-256,umac-128@openssh.com
 
+
+--
+sshd -t
+systemctl restart sshd
